no fancy stuff please

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </li>
       </ul>
       
-      <ul id="calories-submit" class="edit rounded">
+      <ul id="calories-submit" class="rounded">
         <li class="arrow"><a href="#" class="eaten">Eaten</a></li>
         <li class="arrow"><a href="#" class="burned">Burned</a></li>
       </ul>
